# amazon-review-intelligence

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Makefile  README.md  __next.__PAGE__.txt  __next._tree.txt  _not-found.html  _not-found.txt  analytics.html  analytics.txt  compare.html  compare.txt  demo.html  demo.txt  docker-compose.yml  evaluation.html  index.html  index.txt  package.json  pipeline.html  pipeline.txt  products.html  products.txt  pyproject.toml  recommendations.html  reviews.html  reviews.txt  search.html  search.txt
_not-found/: __next._head.txt  __next._not-found.__PAGE__.txt  __next._tree.txt
analytics/: __next._tree.txt  __next.analytics.__PAGE__.txt  clusters.html
compare/: __next._tree.txt  __next.compare.__PAGE__.txt
configs/: config.yaml
data/: evaluation_results.json
demo/: __next._index.txt  __next._tree.txt  __next.demo.__PAGE__.txt
demo-app/: index.html  package.json
docs/: architecture.md  data_card.md  demo_script.md  evaluation.md  licensing_notes.md  model_card.md
evaluation/: __next._full.txt  __next._tree.txt  __next.evaluation.__PAGE__.txt
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts
notebooks/: 01_eda.ipynb  02_modeling.ipynb
pipeline/: __next._tree.txt  __next.pipeline.__PAGE__.txt
products/: B07B3VX83R.html  B07Q3FZBKQ.html  B07Q3FZBKQ.txt  B08HMWFLS1.html  B08N5KWB9H.html  B08N5KWB9H.txt  B09G4XLWJ8.html  B09G4XLWJ8.txt  __next._tree.txt  __next.products.__PAGE__.txt
recommendations/: __next._full.txt  __next._tree.txt  (+1 more)
(+154 files in other folders)
