[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amazon-review-intelligence"
version = "0.1.0"
description = "Amazon Review Intelligence — product search, recommendation, and NLP data product"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "streamlit>=1.35.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "altair>=5.3.0",
    "plotly>=5.22.0",
    "nltk>=3.8.1",
    "joblib>=1.4.0",
    "tqdm>=4.66.0",
    "textblob>=0.18.0",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]
